2006/06/19	kaffeetisch

	* GObject.xs: Register GInitiallyUnowned as
	Glib::InitiallyUnowned.

2006/05/21	kaffeetisch

	* GObject.xs (class_info_finish_loading): Free the list returned
	by g_type_interfaces when we're finished with it.

2006/03/12	kaffeetisch

	* Glib.pm, Makefile.PL, NEWS, README: Stable release 1.120.

2006/03/06	kaffeetisch

	* Glib.pm, NEWS, README: Unstable release 1.118.

2006/03/04	kaffeetisch

	* gperl-private.h, MANIFEST: Add a new header file for private
	functions that are used in more than one xs file.  For now these
	are _gperl_sv_from_value_internal, _gperl_fetch_wrapper_key, and
	some new threading-safety stuff described below.

	* Glib.xs, gperl-private.h: Add _gperl_set_master_interp and
	_gperl_get_master_interp to get and set a global master
	interpreter that can be used to setup perl's thread-local storage.
	For convenience, the new macro GPERL_SET_CONTEXT encapsulates this
	setup step.  Inspired by Dobrica Pavlinusic's approach in the Fuse
	module.

	* Glib.xs: Call _gperl_set_master_interp in BOOT to set the global
	master interpreter to the value of PERL_GET_INTERP.

	* GObject.xs (gobject_destroy_wrapper): Use GPERL_SET_CONTEXT to
	prevent a segfault that occured when this function was called from
	a different thread.  Apparently, PL_in_clean_objs tries to access
	invalid memory if you don't setup perl's context correctly.

	* GLog.xs (gperl_log_handler): Use GPERL_SET_CONTEXT to replace
	the hack that put the value of PERL_GET_CONTEXT into the user
	data.  The result should be the same: correctly setup perl's
	context before calling warn() to avoid segfaults when called from
	a different thread.

	* GType.xs, GObject.xs: Include gperl-private.h to get rid of the
	"extern" declarations.

2006/02/27	kaffeetisch

	* Glib.pm, Makefile.PL, NEWS, README: Unstable release 1.117.

2006/02/14	kaffeetisch

	* GType.xs: Add a missing semicolon that caused compilation
	failures on perl 5.8.8.

2006/02/13	kaffeetisch
